dbml_code = /**/
Table users {
  id integer [primary key]
  username varchar
  created_at timestamp
}

Table channels {
  id integer [primary key]
  name varchar
  owner_id integer [not null, ref: > users.id]
}

Table subscriptions {
  user_id integer [ref: > users.id]
  channel_id integer [ref: > channels.id]
  joined_at timestamp
  Note: "Composite PK = user_id + channel_id"
}

Table messages {
  id integer [primary key]
  content text
  user_id integer [not null, ref: > users.id]
  channel_id integer [not null, ref: > channels.id]
  created_at timestamp
}
"""

# Spara till en fil
dbml_path = "/mnt/data/schema.dbml"
with open(dbml_path, "w") as f:
    f.write(dbml_code)

dbml_path
Resultat
'/mnt/data/schema.dbml'